--- a/0-intro.tex
+++ b/0-intro.tex
@@ -12,18 +12,18 @@ Gas separation and purification are essential processes since they provide key r
 
 A wider use of nanoporous materials could reduce the energy consumption of current separation processes since adsorption is way less energy intensive than liquefaction.\cite{national2019research} For instance, some prototypes involving beds of nanoporous materials have been developed for xenon/krypton separation to avoid employing cryogenic distillation.\cite{Banerjee2018} For the process to be viable, materials need to perform even better and many studies focus on synthesizing ever more selective materials by leveraging all chemical intuitions around noble gas adsorption properties.\cite{Chen_2014, Li_2019, Pei_2022} In order to speed the discovery process of novel materials with key properties, computational screening can identify factors explaining the performance and pre-select candidates for further experimental studies. As recently conceptualized by Lyu et al., a synergistic workflow combining computational discovery and experimental validation can push material discovery to the next stage.\cite{Lyu_2020, Jablonka_2022} But to efficiently guide experimental discoveries, computational chemists are facing two major challenges: generating reliably more structures and evaluating them with fast and accurate models.
 
-The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized \cite{Groom_2016} and 500,000 computationally constructed \cite{Wilmer_2012,Boyd_2016,Colon_2017}. To deal with this ever increasing amount of structures, we need to design more efficient screening procedures as well as faster performance evaluation tools. To go beyond the time-consuming calculations over the whole dataset, computational chemists developed funnel-like screening procedures to reduce the need for expensive simulations and introduced machine learning (ML) models to replace them with faster evaluation tools.\cite{Ren_2022} To further improve the selectivity screening for Xe/Kr separation, we will need to design better performing structural and energy-based descriptors.
+The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized~\cite{Groom_2016} and 500,000 computationally constructed~\cite{Wilmer_2012,Boyd_2016,Colon_2017}. To deal with this ever-increasing amount of structures, we need to design more efficient screening procedures as well as faster performance evaluation tools. To go beyond the time-consuming calculations over the whole dataset, computational chemists developed funnel-like screening procedures to reduce the need for expensive simulations and introduced machine learning (ML) models to replace them with faster evaluation tools.\cite{Ren_2022} To further improve the selectivity screening for Xe/Kr separation, we will need to design better performing structural and energy-based descriptors.
 
-Simon et al. published one of the first articles on an ML-assisted screening approach for the separation of a Xe/Kr mixture extracted from the atmosphere.\cite{Simon_2015} Their model's performance was highly relying on the Voronoi energy, which is basically an average of the interaction energies of a xenon atom at each Voronoi node.\cite{Rycroft_2009} To rationalize this increase in performance, we regarded this Voronoi energy as a faster proxy for the adsorption enthalpy. By comparing it to the standard Widom insertion, we found that although it is faster, it is less accurate; and we developed a more effective alternative, the surface sampling (RAESS) using symmetry and non accessible volumes blocking.\cite{Ren_2023} Recently, Shi et al. used an energy grid to generate energy histograms as a descriptor for their ML model, which gives an exhaustive description of the infinitely diluted adsorption energies,\cite{Shi_2023} but can be computationally expensive.
+Simon et al.\ published one of the first articles on an ML-assisted screening approach for the separation of a Xe/Kr mixture extracted from the atmosphere.\cite{Simon_2015} Their model's performance was highly relying on the Voronoi energy, which is basically an average of the interaction energies of a xenon atom at each Voronoi node.\cite{Rycroft_2009} To rationalize this increase in performance, we regarded this Voronoi energy as a faster proxy for the adsorption enthalpy. By comparing it to the standard Widom insertion, we found that although it is faster, it is less accurate; and we developed a more effective alternative, the surface sampling (RAESS) using symmetry and non-accessible volumes blocking.\cite{Ren_2023} Recently, Shi et al.\ used an energy grid to generate energy histograms as a descriptor for their ML model, which gives an exhaustive description of the infinitely diluted adsorption energies,\cite{Shi_2023} but can be computationally expensive.
 
 All the approaches described above can have good accuracy in the prediction of low-pressure adsorption (i.e., in the limit of zero loading) but are not suitable for prediction of adsorption in the high-pressure regime, when the material is near saturation uptake. While this later task is routinely performed by Grand Canonical Monte Carlo (GCMC) simulations, there is a lack of methods at lower computational cost for high-throughput screening. To better frame our challenge, in this work we are essentially trying to predict the selectivity in the nanopores of a material at high pressure, where adsorbates are interacting with each other, while only having information on the interaction at infinite dilution. The comparison between the low and high pressure cases gives key information on the origin of the differences of selectivity. For instance, we previously showed that selectivity could drop between the low and ambient pressure cases in the Xe/Kr separation application, and it was mainly attributed to the presence of different pore sizes and potential reorganizations due to adsorbate--adsorbate interactions.\cite{Ren_2021}
 
 
+\begin{center}
+    \pgfornament[width=6cm,color=CTsemi]{88}
+\end{center}
 
-This thesis presents my work on 
-
-
-
+This thesis presents my work on the 
 
 \vfill
 \begin{center}
