--- a/main.tex
+++ b/main.tex
@@ -121,7 +121,7 @@
 \pdfminorversion=7
 
 % Automagically transform "foobar" to ``foobar''
-\MakeOuterQuote{"}
+%\MakeOuterQuote{"}
 
 % No Overfull hbox warning for less than 1pt
 \hfuzz=1pt
@@ -366,14 +366,6 @@
 
     \pagestyle{fancy}
     \input{0-intro}
-
-    \begin{equation}\label{eqn:main}
-        1+1=2
-    \end{equation}
-    
-    \begin{center}
-        \pgfornament[width=6cm,color=CTsemi]{88}
-    \end{center}
     
  %   \subfile{0-empty_chapter}
 
