--- a/thesis.bib
+++ b/thesis.bib
@@ -558,6 +558,31 @@
 	title = {Advances, Updates, and Analytics for the Computation-Ready, Experimental Metal{\textendash}Organic Framework Database: {CoRE} {MOF} 2019},
 	journal = {Journal of Chemical {\&} Engineering Data}
 }
+@article{Chung_2014,
+	doi = {10.1021/cm502594j},
+	url = {https://doi.org/10.1021/cm502594j},
+	year = 2014,
+	month = {oct},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {26},
+	number = {21},
+	pages = {6185--6192},
+	author = {Yongchul G. Chung and Jeffrey Camp and Maciej Haranczyk and Benjamin J. Sikora and Wojciech Bury and Vaiva Krungleviciute and Taner Yildirim and Omar K. Farha and David S. Sholl and Randall Q. Snurr},
+	title = {Computation-Ready, Experimental Metal{\textendash}Organic Frameworks: A Tool To Enable High-Throughput Screening of Nanoporous Crystals},
+	journal = {Chemistry of Materials}
+} 
+@article{Gomez_Gualdron_2016,
+	doi = {10.1039/c6ee02104b},
+	url = {https://doi.org/10.1039/c6ee02104b},
+	year = 2016,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {9},
+	number = {10},
+	pages = {3279--3289},
+	author = {Diego A. G{\'{o}}mez-Gualdr{\'{o}}n and Yamil J. Col{\'{o}}n and Xu Zhang and Timothy C. Wang and Yu-Sheng Chen and Joseph T. Hupp and Taner Yildirim and Omar K. Farha and Jian Zhang and Randall Q. Snurr},
+	title = {Evaluating topologically diverse metal{\textendash}organic frameworks for cryo-adsorbed hydrogen storage},
+	journal = {Energy {\&} Environmental Science}
+}
 @article{Tong_2017,
 	doi = {10.1016/j.ces.2017.05.004},
 	url = {https://doi.org/10.1016/j.ces.2017.05.004},
@@ -735,3 +760,67 @@ for Global Competitiveness},
 	title = {Quantifying similarity of pore-geometry in nanoporous materials},
 	journal = {Nature Communications}
 }    
+@article{Fernandez_2013,
+	doi = {10.1021/jp4006422},
+	url = {https://doi.org/10.1021/jp4006422},
+	year = 2013,
+	month = {apr},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {117},
+	number = {15},
+	pages = {7681--7689},
+	author = {Michael Fernandez and Tom K. Woo and Christopher E. Wilmer and Randall Q. Snurr},
+	title = {Large-Scale Quantitative Structure{\textendash}Property Relationship ({QSPR}) Analysis of Methane Storage in Metal{\textendash}Organic Frameworks},
+	journal = {The Journal of Physical Chemistry C}
+}          
+@article{Fernandez_2013_rdf,
+	doi = {10.1021/jp404287t},
+	url = {https://doi.org/10.1021/jp404287t},
+	year = 2013,
+	month = {jul},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {117},
+	number = {27},
+	pages = {14095--14105},
+	author = {Michael Fernandez and Nicholas R. Trefiak and Tom K. Woo},
+	title = {Atomic Property Weighted Radial Distribution Functions Descriptors of Metal{\textendash}Organic Frameworks for the Prediction of Gas Uptake Capacity},
+	journal = {The Journal of Physical Chemistry C}
+}   
+@article{Yang_2020,
+	doi = {10.1016/j.cclet.2019.04.025},
+	url = {https://doi.org/10.1016/j.cclet.2019.04.025},
+	year = 2020,
+	month = {jan},
+	publisher = {Elsevier {BV}},
+	volume = {31},
+	number = {1},
+	pages = {227--230},
+	author = {Lixia Yang and Chao Shi and Lin Li and Yi Li},
+	title = {High-throughput model-building and screening of zeolitic imidazolate frameworks for {CO}2 capture from flue gas},
+	journal = {Chinese Chemical Letters}
+}
+@article{Qiao_2016,
+	doi = {10.1039/c6ta06262h},
+	url = {https://doi.org/10.1039/c6ta06262h},
+	year = 2016,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {4},
+	number = {41},
+	pages = {15904--15912},
+	author = {Zhiwei Qiao and Chunwang Peng and Jian Zhou and Jianwen Jiang},
+	title = {High-throughput computational screening of 137953 metal{\textendash}organic frameworks for membrane separation of a {CO}2/N2/{CH}4 mixture},
+	journal = {Journal of Materials Chemistry A}
+}
+@article{Dureckova_2019,
+	doi = {10.1021/acs.jpcc.8b10644},
+	url = {https://doi.org/10.1021/acs.jpcc.8b10644},
+	year = 2019,
+	month = {jan},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {123},
+	number = {7},
+	pages = {4133--4139},
+	author = {Hana Dureckova and Mykhaylo Krykunov and Mohammad Zein Aghaji and Tom K. Woo},
+	title = {Robust Machine Learning Models for Predicting High {CO}2 Working Capacity and {CO}2/H2 Selectivity of Gas Adsorption in Metal Organic Frameworks for Precombustion Carbon Capture},
+	journal = {The Journal of Physical Chemistry C}
+}       
