--- a/1-screening.tex
+++ b/1-screening.tex
@@ -11,9 +11,27 @@
 
 \subsection{Nanoporous materials}
 
-\subsubsection{Different classes of materials}
+\subsubsection{Different classes of nanoporous materials}
 
+Nanoporous materials are iupac?
 
+definition of porosity/void fraction of surface area 
+
+\textbf{crystalline}
+
+Zeolite
+
+Metal--organic frameworks (MOFs)
+
+Covalent organic frameworks (COFs)
+
+Porous polymer networks
+
+\textbf{amorphous}
+
+activated carbon 
+
+transforming crystalline mat into amorphous one
 
 \subsubsection{Nanoporous material databases}
 
@@ -51,7 +69,7 @@ Moosavi et al.\ made a comparative study of the diversity of three well-known da
 Another approach consists in searching for similarities instead of differences in the materials by studying topological patterns in the data.\cite{Lee_2017}
 These investigations on the data structures give a solid ground to develop novel materials by objectively defining similarity, diversity and novelty. From the analysis gathered so far, one would need to radically change the approach by proposing materials with new chemistry, topology or mechanism (e.g.\ flexibility) in order to significantly improve the diversity of the current databases.
 
-\subsection{Evolution of screening methodologies}
+\subsection{Screening methodologies}
 
 In its early stage, computational screening has been used on small series of nanoporous materials to generate specific knowledge on some subclasses of materials. These small-scale screenings combined with experiments helped faster identification of good performing candidates, but they failed to establish general rules of design or to explore the unknown. Larger-scale screenings overcame these limitations by trying to exhaustively cover the whole spectrum of nanoporous materials.
 
@@ -88,6 +106,8 @@ In 2015, Simon et al.\cite{Simon_2015} analyzed the Nanoporous Materials Genome,
 \subsection{Thermodynamic adsorption properties}
 
 \subsubsection{Gas storage}
+
+
 
 \subsubsection{Gas separation}
 
